<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pnapp.tools.ping.PingActivity" >

    <item
        android:id="@+id/action_scan"
        android:title="@string/action_scan"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear_console"
        android:title="@string/action_clear_console"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_man"
        android:orderInCategory="100"
        android:title="@string/action_man_page"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"/>

</menu>
